# AutomataEngine

./: .gitignore  CMakeLists.txt  README.md
dependencies/imgui/: CMakeLists.txt
dependencies/imgui/backends/: imgui_impl_glfw.cpp
resources/shaders/: automata_instanced_fragment.shader  automata_instanced_vertex.shader  automata_vertex.shader
src/: main.cpp
src/Automata/: Automata.h  atpch.h
src/Automata/Core/: Application.cpp  Application.h  Cell.h  CellMatrix.cpp  CellMatrix.h  Core.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
src/Automata/Core/Elements/: Element.cpp  Element.h
src/Automata/Core/Elements/Gases/: Smoke.cpp  Smoke.h
src/Automata/Core/Elements/Liquids/: Water.cpp  Water.h
src/Automata/Core/Elements/Solids/: Sand.cpp  Sand.h
src/Automata/Core/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/Automata/Renderer/: AutomataRenderer.cpp  AutomataRenderer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h
